# pplus_language

./: .gitignore  .gitignore_cpp  CMakeLists.txt  CMakeLists_cpp.txt  README.md  build.gradle  demo.ppp  hi.p++  oi.p++  settings.gradle  test.ppp  test_completo.ppp  test_simples.ppp
.github/workflows/: codeql.yml
build_cpp/: CMakeCache.txt  Makefile  cmake_install.cmake
cpp_src/include/: Ambiente.h  Interpretador.h  Valor.h
cpp_src/src/: Ambiente.cpp  Interpretador.cpp  Valor.cpp  main.cpp
github/workflows/: ci.yml
gradle/wrapper/: gradle-wrapper.properties
src/main/antlr/org/gustavolyra/: PortugolPP.g4
src/main/antlr/org/gustavolyra/.antlr/: PortugolPP.interp  PortugolPPBaseListener.java  PortugolPPLexer.interp  PortugolPPLexer.java  (+3 more)
src/main/kotlin/: Ambiente.kt  Exceptions.kt  Interpetador.kt  Main.kt  Math.kt  PortugolCLI.kt  Valor.kt
src/main/kotlin/ast/: AstNodes.kt
src/main/kotlin/constants/: BASIC_TYPES.kt  LOOP.kt  ProgramConstants.kt
src/main/kotlin/lexer/: Lexer.kt  Token.kt  TokenType.kt
src/main/kotlin/models/: Ambiente.kt  Valor.kt
src/main/kotlin/models/enums/: BASIC_TYPES.kt  LOOP.kt
src/main/kotlin/models/errors/: Exceptions.kt
src/main/kotlin/processors/: FileIOProcessor.kt  FunctionProcessor.kt  LogicalProcessorUtil.kt  MathProcessor.kt  MathProcessorUtil.kt  NativeFunctionProcessor.kt  SDKFunctionProcessor.kt
src/main/kotlin/util/: FunctionUtils.kt  StringUtil.kt
src/main/kotlin/util/constants/: LOOP.kt
src/main/kotlin/util/processors/: LogicalProcessorUtil.kt  MathProcessorUtil.kt
src/main/native/: file_io.cpp
(+15 files in other folders)
